--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="./static/js/operate_DOM.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script type="module" src="./static/js/server.js"></script>
+    <script type="text/javascript" src="./static/js/server.js"></script>
     <script type="text/javascript" src="./static/js/user.js"></script>
     <title>MathPhysChemLab</title>
 </head>
