--- a/account/login.html
+++ b/account/login.html
@@ -26,13 +26,13 @@
         <input type="text" id="r_username" placeholder="username" />
         <input type="password" id="r_password" placeholder="password" />
         <input type="text" id="r_email" placeholder="email address" />
-        <button onclick="registered();">create</button>
+        <button type="button" onclick="registered();">create</button>
         <p class="message">Already registered? <a href="#">Sign In</a></p>
       </form>
       <form class="login-form">
         <input type="text" id="l_email" placeholder="email address" />
         <input type="password" id="l_password" placeholder="password" />
-        <button onclick="login();">login</button>
+        <button type="button" onclick="login();">login</button>
         <p class="message">Not registered? <a href="#">Create an account</a></p>
       </form>
     </div>
