--- a/account/login.html
+++ b/account/login.html
@@ -25,12 +25,12 @@
       <form class="register-form">
         <input type="text" id="r_username" placeholder="username" />
         <input type="password" id="r_password" placeholder="password" />
-        <input type="text" id="r_email" placeholder="email address" />
+        <input type="email" id="r_email" placeholder="email address" />
         <button type="button" onclick="registered();">create</button>
         <p class="message">Already registered? <a href="#">Sign In</a></p>
       </form>
       <form class="login-form">
-        <input type="text" id="l_email" placeholder="email address" />
+        <input type="text" id="l_username" placeholder="username address" />
         <input type="password" id="l_password" placeholder="password" />
         <button type="button" onclick="login();">login</button>
         <p class="message">Not registered? <a href="#">Create an account</a></p>
