--- a/account/login.html
+++ b/account/login.html
@@ -30,7 +30,7 @@
         <p class="message">Already registered? <a href="#">Sign In</a></p>
       </form>
       <form class="login-form">
-        <input type="text" id="l_username" placeholder="username address" />
+        <input type="text" id="l_username" placeholder="username" />
         <input type="password" id="l_password" placeholder="password" />
         <button type="button" onclick="login();">login</button>
         <p class="message">Not registered? <a href="#">Create an account</a></p>
