--- a/app/Quadratic_Equation_Calculator/index.html
+++ b/app/Quadratic_Equation_Calculator/index.html
@@ -27,7 +27,7 @@
 
     <!-- Top Navigation Bar -->
     <header class="top-bar">
-        <div class="logo"><img src="./static/img/logo.png" class="logo"></div>
+        <div class="logo"><img src="../../static/img/logo.png" class="logo"></div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
