--- a/account/login.html
+++ b/account/login.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="../static/img/logo_s.png">
   <link rel="stylesheet" href="../static/css/loading_motion.css">
   <link rel="stylesheet" href="../static/css/account.css">
   <script type="text/javascript" src="../static/js/APP.js"></script>
