--- a/app/Quadratic_Equation_Calculator/index.html
+++ b/app/Quadratic_Equation_Calculator/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
     <link rel="stylesheet" media="(min-width: 1000px)" href="../../static/css/desktop.css">
