--- a/app/Quadratic_Equation_Calculator/index.html
+++ b/app/Quadratic_Equation_Calculator/index.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" media="(min-width: 1000px)" href="../../static/css/desktop.css">
     <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../../static/css/tablet.css">
     <link rel="stylesheet" media="(max-width: 615px)" href="../../static/css/mobile.css">
+    <link rel="stylesheet" href="../../static/apps/css/style.css">
     <script type="text/javascript" src="../../static/js/APP.js"></script>
     <script type="text/javascript" src="../../static/js/loading_motion.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script type="text/javascript" src="../../static/js/server.js"></script>
     <script type="text/javascript" src="../../static/js/user.js"></script>
+    <script type="text/javascript" src="../../static/apps/js/main.js"></script>
     <script type="text/javascript" src="./script.js"></script>
     <title>Quadratic_Equation_Calculator</title>
 </head>
