--- a/app/x/index.html
+++ b/app/x/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../../static/css/tablet.css">
     <link rel="stylesheet" media="(max-width: 615px)" href="../../static/css/mobile.css">
     <link rel="stylesheet" href="../../static/apps/css/style.css">
+    <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
     <script type="text/javascript" src="../../static/js/APP.js"></script>
     <script type="text/javascript" src="../../static/js/loading_motion.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
