--- a/app/Quadratic_Equation_Calculator/index.html
+++ b/app/Quadratic_Equation_Calculator/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../../static/css/tablet.css">
     <link rel="stylesheet" media="(max-width: 615px)" href="../../static/css/mobile.css">
     <link rel="stylesheet" href="../../static/apps/css/style.css">
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+	    tex2jax: {
+	        inlineMath: [['$','$'], ['\\(','\\)']],
+	        processEscapes: true
+	    }
+	});
+    </script>
     <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
     <script type="text/javascript" src="../../static/js/APP.js"></script>
     <script type="text/javascript" src="../../static/js/loading_motion.js"></script>
