--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="logo"><img src="./static/img/logo.png" class="logo"></div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="https://app.mathscichem.com">Home</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#" onclick="login_b();" id="username">Login</a></li>
             </ul>
