--- a/account/login.html
+++ b/account/login.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../static/css/loading_motion.css">
   <link rel="stylesheet" href="../static/css/account.css">
   <script type="text/javascript" src="../static/js/APP.js"></script>
+  <script type="text/javascript" src="../app/index.js"></script>
   <script type="text/javascript" src="../static/js/loading_motion.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
