--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="./static/css/tablet.css">
     <link rel="stylesheet" media="(max-width: 615px)" href="./static/css/mobile.css">
     <script type="text/javascript" src="./static/js/APP.js"></script>
+    <script type="text/javascript" src="./app/index.js"></script>
     <script type="text/javascript" src="./static/js/loading_motion.js"></script>
     <script type="text/javascript" src="./static/js/operate_DOM.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
