--- a/account/index.html
+++ b/account/index.html
@@ -46,7 +46,7 @@
             <div id="u_img"></div>
             <div id="u_name"></div>
             <div id="u_email"></div>
-            <div id="u_bio"></div>
+            <div id="u_info"></div>
             <div id="u_gender"></div>
             <div id="u_password"></div>
         </div>
