--- a/account/index.html
+++ b/account/index.html
@@ -43,12 +43,12 @@
     <!-- Main Content -->
     <main>
         <div id="container" class="container">
-            <div id="u_img"></div>
-            <div id="u_name"></div>
-            <div id="u_email"></div>
-            <div id="u_info"></div>
-            <div id="u_gender"></div>
-            <div id="u_password"></div>
+            <div id="u_img" class="account-block"></div>
+            <div id="u_name" class="account-block"></div>
+            <div id="u_email" class="account-block"></div>
+            <div id="u_info" class="account-block"></div>
+            <div id="u_gender" class="account-block"></div>
+            <div id="u_password" class="account-block"></div>
         </div>
     </main>
 
