--- a/account/index.html
+++ b/account/index.html
@@ -18,6 +18,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script type="text/javascript" src="../static/js/server.js"></script>
+    <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/account.js"></script>
     <title>MathPhysChemLab | Login</title>
 </head>
