--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <footer class="mobile-bar">
         <div class="footer-button">Search</div>
         <div class="footer-home-button">Home</div>
-        <div class="footer-button">My</div>
+        <div class="footer-button" onclick="login_b();">My</div>
     </footer>
 </body>
 
