--- a/account/index.html
+++ b/account/index.html
@@ -56,8 +56,8 @@
     <!-- Mobile Bottom Navigation -->
     <footer class="mobile-bar">
         <div class="footer-button">Search</div>
-        <div class="footer-home-button">Home</div>
-        <div class="footer-button">My</div>
+        <div class="footer-button">Home</div>
+        <div class="footer-home-button" onclick="login_b();">My</div>
     </footer>
 </body>
 
