--- a/account/index.html
+++ b/account/index.html
@@ -56,7 +56,7 @@
     <!-- Mobile Bottom Navigation -->
     <footer class="mobile-bar">
         <div class="footer-button">Search</div>
-        <div class="footer-button">Home</div>
+        <div class="footer-button" onclick="window.location='../'">Home</div>
         <div class="footer-home-button" onclick="login_b();">My</div>
     </footer>
 </body>
