--- a/index.html
+++ b/index.html
@@ -41,98 +41,8 @@
 
     <!-- Main Content -->
     <main>
-        <div id="container" class="container"><!--
-            <div class="flow-element full-line">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title<sup class="hot-tag">&nbsp;HOT</sup></h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-            <div class="flow-element">
-                <img src="./static/img/logo_s.png" alt="Description of Image">
-                <h2>Flow Element Title</h2>
-                <p>This is a brief description of the Flow Element. It can include technical details and information
-                    about the element.</p>
-            </div>
-        -->
+        <div id="container" class="container">
+            
         </div>
     </main>
 
