--- a/account/login.html
+++ b/account/login.html
@@ -48,8 +48,8 @@
           <input type="email" id="r_email" placeholder="email address" />
           <input type="password" id="r_password" placeholder="password" />
           <input type="text" id="r_info" placeholder="Bio" />
-          <label for="gender">Gender：</label>
-          <select id="r_gender" name="gender">
+          <label for="gender" class="gender-select">Gender：</label>
+          <select id="r_gender" class="gender-select" name="gender">
             <option value="male">Male</option>
             <option value="female">Female</option>
             <option value="other">Other</option>
