--- a/account/index.html
+++ b/account/index.html
@@ -44,7 +44,9 @@
     <!-- Main Content -->
     <main>
         <div id="container" class="container">
-            <div id="u_img" class="account-block"></div>
+            <div class="account-block">
+                <img id="u_img">
+            </div>
             <div id="u_name" class="account-block"></div>
             <div id="u_email" class="account-block"></div>
             <div id="u_info" class="account-block"></div>
