--- a/account/index.html
+++ b/account/index.html
@@ -53,6 +53,11 @@
             <div id="u_gender" class="account-block"></div>
             <div id="u_password" class="account-block"></div>
         </div>
+        <div id="container" class="container">
+            <div class="account-block" onclick="">My Class</div>
+            <div class="account-block" onclick="">My Likes</div>
+            <div class="account-block" onclick="">Friends</div>
+        </div>
     </main>
 
     <!-- Mobile Bottom Navigation -->
