--- a/account/index.html
+++ b/account/index.html
@@ -55,7 +55,11 @@
         </div>
         <div id="container" class="container">
             <div class="account-block" onclick="">My Class</div>
+        </div>
+        <div id="container" class="container">
             <div class="account-block" onclick="">My Likes</div>
+        </div>
+        <div id="container" class="container">
             <div class="account-block" onclick="">Friends</div>
         </div>
     </main>
