--- a/account/index.html
+++ b/account/index.html
@@ -54,13 +54,13 @@
             <div id="u_password" class="account-block"></div>
         </div>
         <div id="container" class="container">
-            <div class="account-block" onclick="">My Class</div>
+            <div class="account-block account-side" onclick="">My Class</div>
         </div>
         <div id="container" class="container">
-            <div class="account-block" onclick="">My Likes</div>
+            <div class="account-block account-side" onclick="">My Likes</div>
         </div>
         <div id="container" class="container">
-            <div class="account-block" onclick="">Friends</div>
+            <div class="account-block account-side" onclick="">Friends</div>
         </div>
     </main>
 
