--- a/account/index.html
+++ b/account/index.html
@@ -62,6 +62,9 @@
         <div id="container" class="container">
             <div class="account-block account-side" onclick="window.location='../friends/'">Friends</div>
         </div>
+        <div id="container" class="container">
+            <div class="account-block account-side" onclick="window.location='../setting/'">Setting</div>
+        </div>
     </main>
 
     <!-- Mobile Bottom Navigation -->
