--- a/account/index.html
+++ b/account/index.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li><a href="https://app.mathscichem.com">Home</a></li>
-                <li><a href="#">Search</a></li>
+                <li><a href="../search/">Search</a></li>
                 <li><a href="#" onclick="login_b();" id="username">Login</a></li>
             </ul>
         </nav>
@@ -69,7 +69,7 @@
 
     <!-- Mobile Bottom Navigation -->
     <footer class="mobile-bar">
-        <div class="footer-button">Search</div>
+        <div class="footer-button" onclick="window.location='./search/'">Search</div>
         <div class="footer-button" onclick="window.location='../'">Home</div>
         <div class="footer-home-button" onclick="login_b();">My</div>
     </footer>
