--- a/account/login.html
+++ b/account/login.html
@@ -33,7 +33,7 @@
     <nav>
       <ul>
         <li><a href="https://app.mathscichem.com">Home</a></li>
-        <li><a href="#">Search</a></li>
+        <li><a href="./search/">Search</a></li>
         <li><a href="#" onclick="login_b();" id="username">Login</a></li>
       </ul>
     </nav>
@@ -70,7 +70,7 @@
 
   <!-- Mobile Bottom Navigation -->
   <footer class="mobile-bar">
-    <div class="footer-button">Search</div>
+    <div class="footer-button" onclick="window.location='./search/'">Search</div>
     <div class="footer-button" onclick="window.location='../'">Home</div>
     <div class="footer-home-button" onclick="login_b();">My</div>
   </footer>
