--- a/likes/index.html
+++ b/likes/index.html
@@ -48,7 +48,7 @@
 
     <!-- Mobile Bottom Navigation -->
     <footer class="mobile-bar">
-        <div class="footer-button" onclick="window.location='./search/'">Search</div>
+        <div class="footer-button" onclick="window.location='../search/'">Search</div>
         <div class="footer-button" onclick="window.location='../'">Home</div>
         <div class="footer-button" onclick="login_b();">My</div>
     </footer>
