--- a/likes/index.html
+++ b/likes/index.html
@@ -38,7 +38,7 @@
             </ul>
         </nav>
     </header>
-    <div class="types">
+    <div class="types" id="types">
         <div class="type">1</div>
         <div class="type">2</div>
         <div class="type">3</div>
