--- a/search/index.html
+++ b/search/index.html
@@ -16,6 +16,7 @@
     <!--<script type="text/javascript" src="../static/js/likes.js"></script>-->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script type="text/javascript" src="../static/js/server.js"></script>
     <script type="text/javascript" src="../static/js/user.js"></script>
     <title>MathPhysChemLab</title>
