--- a/account/login.html
+++ b/account/login.html
@@ -45,7 +45,7 @@
     <div class="login-page">
       <div class="form">
         <form class="register-form">
-          <input type="text" id="r_username" placeholder="username(login)" />
+          <input type="text" id="r_username" placeholder="username" />
           <input type="email" id="r_email" placeholder="email address" />
           <input type="password" id="r_password" placeholder="password" />
           <input type="text" id="r_info" placeholder="Bio" />
@@ -60,7 +60,7 @@
           <p class="message">Already registered? <a href="#">Sign In</a></p>
         </form>
         <form class="login-form">
-          <input type="text" id="l_username" placeholder="username" />
+          <input type="text" id="l_email" placeholder="e-mail" />
           <input type="password" id="l_password" placeholder="password" />
           <button type="button" onclick="login();">login</button>
           <p class="message">Not registered? <a href="#">Create an account</a></p>
