--- a/account/login.html
+++ b/account/login.html
@@ -63,7 +63,8 @@
           <input type="text" id="l_email" placeholder="e-mail" />
           <input type="password" id="l_password" placeholder="password" />
           <button type="button" onclick="login();">login</button>
-          <p class="message">Not registered? <a href="#">Create an account</a></p>
+          <p class="message">Not registered? <a href="#">Create an account</a> or <a href="#"
+              onclick="showForgotPasswordForm()">Forgot Password</a></p>
         </form>
       </div>
     </div>
