--- a/account/resetPassword.html
+++ b/account/resetPassword.html
@@ -48,7 +48,7 @@
                     <form class="forgot-password-form" style="display: none;">
                         <input type="email" id="reset_email" placeholder="e-mail" />
                         <button type="button" onclick="resetPassword();">Reset Password</button>
-                        <p class="message"><a href="#" onclick="showLoginForm()">Back to Login</a></p>
+                        <p class="message"><a href="./login.html">Back to Login</a></p>
                     </form>
                 </form>
             </div>
