--- a/account/index.html
+++ b/account/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="../static/js/server.js"></script>
     <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/account.js"></script>
+    <script type="text/javascript" src="../static/js/AsSense.js"></script>
     <title>MathPhysChemLab | Login</title>
 </head>
 
