--- a/account/resetPassword.html
+++ b/account/resetPassword.html
@@ -19,6 +19,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script type="text/javascript" src="../static/js/server.js"></script>
     <script type="text/javascript" src="../static/js/login.js"></script>
+    <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
     <title>MathPhysChemLab | Login</title>
 </head>
