--- a/class/index.html
+++ b/class/index.html
@@ -13,15 +13,16 @@
     <script type="text/javascript" src="../static/js/APP.js"></script>
     <script type="text/javascript" src="../app/index.js"></script>
     <script type="text/javascript" src="../static/js/loading_motion.js"></script>
+    <script type="text/javascript" src="./static/js/class.js"></script>
     <!--<script type="text/javascript" src="../static/js/likes.js"></script>-->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script type="text/javascript" src="../static/js/server.js"></script>
     <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
-    <title>MathPhysChemLab</title>
+    <title>Class | MathPhysChemLab</title>
 </head>
 
 <body>
@@ -45,7 +46,7 @@
     <!-- Main Content -->
     <main>
         <div id="container" class="container">
-            <
+
         </div>
     </main>
 
