--- a/class/index.html
+++ b/class/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="../static/js/APP.js"></script>
     <script type="text/javascript" src="../app/index.js"></script>
     <script type="text/javascript" src="../static/js/loading_motion.js"></script>
-    <script type="text/javascript" src="./static/js/class.js"></script>
+    <script type="text/javascript" src="../static/js/class.js"></script>
     <!--<script type="text/javascript" src="../static/js/likes.js"></script>-->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
