--- a/class/classroom.html
+++ b/class/classroom.html
@@ -44,8 +44,9 @@
     </header>
 
     <div class="types" id="types">
-        <div class="type_title">My Class</div>
-        <div class="type_join" id="join_button">Join/Create Class</div>
+        <div class="type">My Class</div>
+        <div class="type">Peopel</div>
+        <div class="type">Setting</div>
     </div>
 
     <!-- Main Content -->
