--- a/class/classroom.html
+++ b/class/classroom.html
@@ -45,7 +45,7 @@
 
     <div class="types" id="types">
         <div class="type">My Class</div>
-        <div class="type">Peopel</div>
+        <div class="type">People</div>
         <div class="type">Setting</div>
     </div>
 
