--- a/class/classroom.html
+++ b/class/classroom.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" media="(min-width: 1000px)" href="../static/css/desktop.css">
     <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../static/css/tablet.css">
     <link rel="stylesheet" media="(max-width: 615px)" href="../static/css/mobile.css">
-    <link rel="stylesheet" href="../static/css/class.css">
+    <link rel="stylesheet" href="../static/css/classroom.css">
     <script type="text/javascript" src="../static/js/APP.js"></script>
     <script type="text/javascript" src="../app/index.js"></script>
     <script type="text/javascript" src="../static/js/loading_motion.js"></script>
