--- a/class/classroom.html
+++ b/class/classroom.html
@@ -44,9 +44,9 @@
     </header>
 
     <div class="types" id="types">
-        <div class="type">My Class</div>
-        <div class="type">People</div>
-        <div class="type">Setting</div>
+        <div class="type" onclick="click_todo()">To do</div>
+        <div class="type" onclick="click_people()">People</div>
+        <div class="type" onclick="click_setting()">Setting</div>
     </div>
 
     <!-- Main Content -->
