--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Downloads.loader.js";
+      var loaderUrl = buildUrl + "/santi.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Downloads.data.gz",
-        frameworkUrl: buildUrl + "/Downloads.framework.js.gz",
-        codeUrl: buildUrl + "/Downloads.wasm.gz",
+        dataUrl: buildUrl + "/santi.data.unityweb",
+        frameworkUrl: buildUrl + "/santi.framework.js.unityweb",
+        codeUrl: buildUrl + "/santi.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "三体运动模拟器",
