--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 三体运动模拟器</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>三体运动模拟器</title>
+  <link rel="shortcut icon" href="TemplateData/favicon.ico">
+  <link rel="stylesheet" href="TemplateData/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
+  <link rel="stylesheet" href="../../static/css/loading_motion.css">
+  <link rel="stylesheet" href="../../static/css/styles.css">
+  <link rel="stylesheet" media="(min-width: 1000px)" href="../../static/css/desktop.css">
+  <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../../static/css/tablet.css">
+  <link rel="stylesheet" media="(max-width: 615px)" href="../../static/css/mobile.css">
+  <link rel="stylesheet" href="../../static/apps/css/style.css">
+  <!-- 引入 KaTeX CSS 文件 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
+  <!-- 引入 KaTeX JS 文件 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.js"></script>
+  <!-- 引入 KaTeX Auto-Render JS 文件，以启用自动渲染 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/contrib/auto-render.min.js"></script>
+  <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+  <script type="text/javascript" src="../../static/js/APP.js"></script>
+  <script type="text/javascript" src="../../static/js/loading_motion.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script type="text/javascript" src="../../static/js/server.js"></script>
+  <script type="text/javascript" src="../../static/js/user.js"></script>
+  <script type="text/javascript" src="../../static/apps/js/main.js"></script>
+  <script type="text/javascript" src="./script.js"></script>
+  <script type="text/javascript" src="../../static/js/Analytics.js"></script>
+  <script type="text/javascript" src="../../static/js/AsSense.js"></script>
+</head>
+
+<body>
+  <!-- Loading Animation -->
+  <div class="loader">
+    <div class="loading-animation"></div>
+  </div>
+
+  <!-- Top Navigation Bar -->
+  <header class="top-bar">
+    <div class="logo"><img src="../static/img/logo.png" class="logo"></div>
+    <nav>
+      <ul>
+        <li><a href="https://app.mathscichem.com">Home</a></li>
+        <li><a href="../search/">Search</a></li>
+        <li><a href="#" onclick="login_b();" id="username">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
@@ -48,7 +94,7 @@
         if (type == 'error') div.style = 'background: red; padding: 10px;';
         else {
           if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
+          setTimeout(function () {
             warningBanner.removeChild(div);
             updateBannerVisibility();
           }, 5000);
@@ -105,18 +151,27 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                loadingBar.style.display = "none";
-                fullscreenButton.onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-              }).catch((message) => {
-                alert(message);
-              });
-            };
+        }).then((unityInstance) => {
+          loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          alert(message);
+        });
+      };
 
       document.body.appendChild(script);
 
     </script>
-  </body>
+  </main>
+
+  <!-- Mobile Bottom Navigation -->
+  <footer class="mobile-bar">
+    <div class="footer-button" onclick="window.location='../search/'">Search</div>
+    <div class="footer-button" onclick="window.location='../'">Home</div>
+    <div class="footer-button" onclick="login_b();">My</div>
+  </footer>
+</body>
+
 </html>
