--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>三体运动模拟器</title>
+  <title>Three-Body Motion Simulator</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,7 +66,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">三体运动模拟器</div>
+        <div id="unity-build-title">Three-Body Motion Simulator</div>
       </div>
     </div>
     <script>
@@ -110,7 +110,7 @@
         codeUrl: buildUrl + "/santi.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "三体运动模拟器",
+        productName: "Three-Body Motion Simulator",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
