--- a/likes/index.html
+++ b/likes/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" media="(min-width: 1000px)" href="../static/css/desktop.css">
     <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../static/css/tablet.css">
     <link rel="stylesheet" media="(max-width: 615px)" href="../static/css/mobile.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="../static/js/APP.js"></script>
     <script type="text/javascript" src="../app/index.js"></script>
     <script type="text/javascript" src="../static/js/loading_motion.js"></script>
@@ -59,6 +60,8 @@
         <div class="footer-button" onclick="window.location='../'">Home</div>
         <div class="footer-button" onclick="login_b();">My</div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
