--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -15,7 +15,12 @@
   <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../../static/css/tablet.css">
   <link rel="stylesheet" media="(max-width: 615px)" href="../../static/css/mobile.css">
   <link rel="stylesheet" href="../../static/apps/css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- 引入 KaTeX CSS 文件 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
+  <!-- 引入 KaTeX JS 文件 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.js"></script>
+  <!-- 引入 KaTeX Auto-Render JS 文件，以启用自动渲染 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/contrib/auto-render.min.js"></script>
   <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
   <script type="text/javascript" src="../../static/js/APP.js"></script>
   <script type="text/javascript" src="../../static/js/loading_motion.js"></script>
@@ -167,8 +172,6 @@
     <div class="footer-button" onclick="window.location='../'">Home</div>
     <div class="footer-button" onclick="login_b();">My</div>
   </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
