--- a/test/index.html
+++ b/test/index.html
@@ -60,27 +60,24 @@
             <div class="main-content" style="display: none;">
                 <div class="question-section">
                     <div class="question-title">
-                        <!-- Question title here -->
+                        Questions 1
                     </div>
                     <div class="question-body">
-                        <!-- Question body here -->
+                        <p>Questions Questions Questions Questions Questions Questions</p>
+                        <p>Questions Questions Questions Questions Questions Questions</p>
+                        <p>Questions Questions Questions Questions Questions Questions</p>
                     </div>
                 </div>
 
                 <div class="answer-section">
-                    <!-- Answer section content here -->
+                    <input>
                 </div>
             </div>
 
-            <div class="right-sidebar">
-                <!-- Right sidebar content here -->
-            </div>
-
             <div class="bottom-bar">
-                <!-- Bottom bar content here -->
+                <button>Sub</button>
             </div>
 
-            <!-- Your script and other references here -->
         </div>
     </main>
 
