--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" media="(min-width: 616px) and (max-width: 999px)" href="../static/css/tablet.css">
     <link rel="stylesheet" media="(max-width: 615px)" href="../static/css/mobile.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- 引入 KaTeX CSS 文件 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
+    <!-- 引入 KaTeX JS 文件 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.js"></script>
+    <!-- 引入 KaTeX Auto-Render JS 文件，以启用自动渲染 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/contrib/auto-render.min.js"></script>
     <script type="text/javascript" src="../static/js/APP.js"></script>
     <script type="text/javascript" src="../app/index.js"></script>
     <script type="text/javascript" src="../static/js/loading_motion.js"></script>
