--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -109,7 +109,7 @@
         frameworkUrl: buildUrl + "/santi.framework.js.unityweb",
         codeUrl: buildUrl + "/santi.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "MPC Lab",
         productName: "Three-Body Motion Simulator",
         productVersion: "0.1",
         showBanner: unityShowBanner,
