--- a/test/index.html
+++ b/test/index.html
@@ -28,7 +28,9 @@
     <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
-    <script src="script.js"></script>
+    <script src="./main.js"></script>
+    <script src="./test.js"></script>
+    <script src="./Anti-cheating.js"></script>
     <title>MPC Testing</title>
 </head>
 
@@ -52,7 +54,12 @@
 
     <!-- Main Content -->
     <main>
+        <div class="test" id="test">
 
+        </div>
+        <div class="pre-test" id="pre_test">
+
+        </div>
     </main>
 
     <!-- Mobile Bottom Navigation -->
