--- a/app/Astronomy_Solar_system_simulator/index.html
+++ b/app/Astronomy_Solar_system_simulator/index.html
@@ -43,7 +43,7 @@
 
   <!-- Top Navigation Bar -->
   <header class="top-bar">
-    <div class="logo"><img src="../static/img/logo.png" class="logo"></div>
+    <div class="logo"><img src="../../static/img/logo.png" class="logo"></div>
     <nav>
       <ul>
         <li><a href="https://app.mathscichem.com">Home</a></li>
