--- a/account/index.html
+++ b/account/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../static/js/account.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
-    <title>MathPhysChemLab | Login</title>
+    <title>My Account | MathPhysChemLab</title>
 </head>
 
 <body>
