--- a/account/resetPassword.html
+++ b/account/resetPassword.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="../static/js/login.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
-    <title>MathPhysChemLab | Login</title>
+    <title>Reset Password | MathPhysChemLab</title>
 </head>
 
 <body>
