--- a/app/x/index.html
+++ b/app/x/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="./script.js"></script>
     <script type="text/javascript" src="../../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../../static/js/AsSense.js"></script>
-    <title>QuizMatic Pro</title>
+    <title>QuizMatic Pro | MathPhysChemLab</title>
 </head>
 
 <body>
