--- a/class/index.html
+++ b/class/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
-    <title>Class | MathPhysChemLab</title>
+    <title>My Class | MathPhysChemLab</title>
 </head>
 
 <body>
