--- a/friends/index.html
+++ b/friends/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
-    <title>MathPhysChemLab</title>
+    <title>My Friends | MathPhysChemLab</title>
 </head>
 
 <body>
