--- a/app/Astronomy_Solar_system_simulator/index.html
+++ b/app/Astronomy_Solar_system_simulator/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Astronomy Solar system simulator</title>
+  <title>Astronomy Solar system simulator | MathPhysChemLab</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
