--- a/app/Three_By_Three_Matrix_Calculator/index.html
+++ b/app/Three_By_Three_Matrix_Calculator/index.html
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="./script.js"></script>
     <script type="text/javascript" src="../../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../../static/js/AsSense.js"></script>
-    <title>Quadratic_Equation_Calculator</title>
+    <title>Three By Three Matrix Calculator | MathPhysChemLab</title>
 </head>
 
 <body>
