--- a/class/classroom.html
+++ b/class/classroom.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
-    <title>Class | MathPhysChemLab</title>
+    <title>Classroom | MathPhysChemLab</title>
 </head>
 
 <body>
